--- a/SPRING_base_project_MVC_JPA/pom.xml
+++ b/SPRING_base_project_MVC_JPA/pom.xml
@@ -41,6 +41,19 @@
 	  <version>2.9.1</version>
 	  <type>pom</type>
 	</dependency>
+	
+	<dependency>
+	  <groupId>jstl</groupId>
+	  <artifactId>jstl</artifactId>
+	  <version>1.2</version>
+	</dependency>
+	
+	<dependency>
+	  <groupId>org.apache.taglibs</groupId>
+	  <artifactId>taglibs-standard</artifactId>
+	  <version>1.2.5</version>
+	  <type>pom</type>
+	</dependency>
   </dependencies>
   
   <build>
